@@ -4,10 +4,14 @@ import com.joaorihan.courierprime.config.ConfigManager;
 import com.joaorihan.courierprime.config.Message;
 import com.joaorihan.courierprime.courier.Courier;
 import com.joaorihan.courierprime.config.MainConfig;
+import org.bukkit.Bukkit;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Entity;
 import org.bukkit.entity.Player;
+import org.bukkit.util.StringUtil;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class AdminCommand extends AbstractCommand{
@@ -33,6 +37,7 @@ public class AdminCommand extends AbstractCommand{
             return;
         }
 
+        // reload
         if (args[0].equals("reload")){
 
             if (!player.hasPermission("courierprime.reload")) {
@@ -57,32 +62,41 @@ public class AdminCommand extends AbstractCommand{
             return;
         }
 
-//        Player target = Bukkit.getPlayer(args[1]);
-//        if (target == null) {
-//            player.sendMessage(Utilities.pullMessage("target-not-found"));
-//            return;
-//        }
-//
-//        if (args[0].equals("block")){
-//
-//            if (getPlugin().getLetterManager().isInBlockedMode(target)){
-//                player.sendMessage(Utilities.pullMessage("error-already-blocked"));
-//                return;
-//            }
-//
-//            getPlugin().getLetterManager().addBlockedPlayer(target);
-//            return;
-//        }
-//
-//        if (args[0].equals("unblock")){
-//            if (!getPlugin().getLetterManager().isInBlockedMode(target)){
-//                player.sendMessage(Utilities.pullMessage("error-already-unblocked"));
-//                return;
-//            }
-//
-//            getPlugin().getLetterManager().removeBlockedPlayer(target);
-//            return;
-//        }
+        // block / unblock
+
+        if (args.length < 2){
+            player.sendMessage(getPlugin().getMessageManager().getMessage(Message.ERROR_UNKNOWN_ARGS, true));
+            return;
+        }
+
+        Player target = Bukkit.getPlayer(args[1]);
+        if (target == null) {
+            player.sendMessage(getPlugin().getMessageManager().getMessage(Message.ERROR_TARGET_NOT_FOUND, true));
+            return;
+        }
+
+        if (args[0].equals("block")){
+
+            if (getPlugin().getLetterManager().isInBlockedMode(target)){
+                player.sendMessage(getPlugin().getMessageManager().getMessage(Message.ERROR_ALREADY_BLOCKED, true));
+                return;
+            }
+
+            getPlugin().getLetterManager().addBlockedPlayer(target);
+            player.sendMessage(getPlugin().getMessageManager().getMessage(Message.SUCCESS_ADD_BLOCKED, true).replace("$PLAYER$", target.getName()));
+            return;
+        }
+
+        if (args[0].equals("unblock")){
+            if (!getPlugin().getLetterManager().isInBlockedMode(target)){
+                player.sendMessage(getPlugin().getMessageManager().getMessage(Message.ERROR_ALREADY_UNBLOCKED, true));
+                return;
+            }
+
+            getPlugin().getLetterManager().removeBlockedPlayer(target);
+            player.sendMessage(getPlugin().getMessageManager().getMessage(Message.SUCCESS_REMOVE_BLOCKED, true).replace("$PLAYER$", target.getName()));
+            return;
+        }
 
     }
 
@@ -90,7 +104,17 @@ public class AdminCommand extends AbstractCommand{
     public List<String> onTabComplete(CommandSender sender, String[] args) {
 
         if (args.length == 1){
-            return List.of("reload");
+            return StringUtil.copyPartialMatches(args[0], Arrays.asList("reload", "block", "unblock"), new ArrayList<>());
+        }
+
+
+        if (args.length == 2){
+            List<String> names = new ArrayList<>();
+
+            for (Player player : Bukkit.getOnlinePlayers()){
+                names.add(player.getName());
+            }
+            return StringUtil.copyPartialMatches(args[1], names, new ArrayList<>());
         }
 
         return List.of();
